testsuite/poke.pkl/struct-method-diag-6.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    defun foo = void: {}
    defun bar = void:
      {
        defun baz = void:
        {
          foo; /* { dg-error "references" } */
        }
      }
  };
